# shipper-swarm

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GAPS_CLOSEOUT.md  GEMINI.md  LICENSE  MISSION.md  README.md  RELEASE_CHECKLIST_v0.2.0.md  RELEASE_CHECKLIST_v0.3.0.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  ROADMAP.md  SECURITY.md  clippy.toml  codecov.yml  ripr.toml
crates/shipper/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-cargo-failure/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-cargo-failure/src/: lib.rs
crates/shipper-cargo-failure/src/snapshots/: shipper_cargo_failure__tests__all_messages.snap  shipper_cargo_failure__tests__ambiguous_no_registry_response.snap  shipper_cargo_failure__tests__ambiguous_process_killed_mid_upload.snap  shipper_cargo_failure__tests__ambiguous_signal_terminated.snap  shipper_cargo_failure__tests__cross_stream_retryable_precedence.snap  shipper_cargo_failure__tests__debug_ambiguous.snap  shipper_cargo_failure__tests__debug_class_ambiguous.snap  shipper_cargo_failure__tests__debug_class_permanent.snap  shipper_cargo_failure__tests__debug_class_retryable.snap  shipper_cargo_failure__tests__debug_permanent.snap  shipper_cargo_failure__tests__debug_retryable.snap  shipper_cargo_failure__tests__error_msg_ambiguous_context.snap  shipper_cargo_failure__tests__error_msg_dns_resolution.snap  shipper_cargo_failure__tests__error_msg_permanent_action.snap  shipper_cargo_failure__tests__error_msg_retryable_action.snap  shipper_cargo_failure__tests__error_msg_version_already_exists.snap  shipper_cargo_failure__tests__permanent_pattern_exhaustive.snap  shipper_cargo_failure__tests__realistic_already_published.snap  shipper_cargo_failure__tests__realistic_ci_cancellation.snap  shipper_cargo_failure__tests__realistic_partial_json_response.snap  shipper_cargo_failure__tests__realworld_oom_killed.snap  shipper_cargo_failure__tests__retryable_pattern_exhaustive.snap
crates/shipper-cargo-failure/tests/: classifier_contract_integration.rs
crates/shipper-cli/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
crates/shipper-cli/src/: lib.rs  main.rs
crates/shipper-cli/src/doctor/: findings.rs  mod.rs  redaction.rs
crates/shipper-cli/src/output/: AGENTS.md  CLAUDE.md  mod.rs
crates/shipper-cli/tests/: bdd_config.rs  bdd_doctor.rs  bdd_error_handling.rs  bdd_error_recovery.rs  bdd_micro_backends.rs  bdd_parallel.rs  bdd_preflight.rs  bdd_publish.rs  bdd_publish_advanced.rs  bdd_publish_flow.rs  bdd_resume.rs  bdd_status.rs  bdd_workflow.rs  cli_e2e.rs  cli_snapshots.rs  e2e_config.rs  e2e_doctor.rs  e2e_expanded.rs  e2e_plan.rs  e2e_preflight.rs  e2e_publish.rs  e2e_rehearse.rs  e2e_resume.rs  e2e_status.rs  integration_config.rs
crates/shipper-cli/tests/snapshots/: cli_snapshots__ci_help.snap  cli_snapshots__clean_help.snap  cli_snapshots__completion_missing_shell.snap  (+98 more)
crates/shipper-config/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-config/src/: lib.rs
crates/shipper-config/tests/: config_integration.rs  config_runtime_bdd.rs  config_runtime_contract.rs  config_runtime_proptest.rs
crates/shipper-core/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-core/proptest-regressions/: property_tests.txt  types.txt
crates/shipper-core/src/: config.rs  encryption.rs  git.rs  lib.rs  property_tests.rs  stress_tests.rs  types.rs  webhook.rs
crates/shipper-duration/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-duration/src/: lib.rs
crates/shipper-duration/tests/: duration_config_integration.rs  snapshots.rs
crates/shipper-encrypt/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-encrypt/src/: lib.rs
crates/shipper-output-sanitizer/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-output-sanitizer/src/: lib.rs
crates/shipper-output-sanitizer/tests/: redaction_contract.rs
crates/shipper-registry/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-registry/src/: context.rs  http.rs  lib.rs
crates/shipper-retry/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-retry/src/: lib.rs
crates/shipper-retry/tests/: retry_integration.rs
crates/shipper-sparse-index/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-sparse-index/src/: lib.rs
crates/shipper-sparse-index/tests/: property_tests.rs  sparse_index_contract_integration.rs
crates/shipper-types/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-types/src/: lib.rs  schema.rs
crates/shipper-types/tests/: release_levels_integration.rs  schema_contract_integration.rs  schema_snapshot_tests.rs
crates/shipper-webhook/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/shipper-webhook/src/: lib.rs
crates/shipper/src/: lib.rs
crates/shipper/tests/: config_contract.rs  cross_crate_integration.rs  engine_parallel_chunking_bdd.rs  engine_parallel_chunking_integration.rs  execution_bdd.rs  facade_cli.rs  facade_integration.rs  integration_plan_engine.rs  parallel_levels_integration.rs  pipeline_integration.rs  schema_version_integration.rs  state_integration.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: auth_token_resolve.rs  cargo_failure_classifier.rs  config_deserialize.rs  config_parse.rs  config_parser.rs  config_runtime_adapter.rs  duration_codec.rs  duration_parse.rs  encrypt_decrypt.rs  engine_parallel_chunks.rs  event_log_roundtrip.rs  execution_core.rs  execution_state_deserialize.rs  git_context.rs  load_state.rs  output_sanitizer.rs  plan_builder.rs  plan_levels.rs  plan_ordering.rs  receipt_deserialize.rs  receipt_load.rs  redact_output.rs  release_levels.rs  resolve_token.rs  retry_strategy.rs  schema_version.rs  sparse_index.rs  state_load.rs  types_serialization.rs  webhook_payload.rs  webhook_payload_construct.rs
xtask/: Cargo.toml
xtask/src/: check_file_policy.rs  checks.rs  clippy_checks.rs  doc_contracts.rs  file_policy.rs  main.rs  mutants.rs  no_panic.rs  package_surface.rs  policy_report.rs  propose.rs  ripr.rs  workflow_checks.rs
(+996 files in other folders)
