[workspace]
members = [
  "crates/shipper",
  "crates/shipper-core",
  "crates/shipper-cli",
  "crates/shipper-duration",
  "crates/shipper-retry",
  "crates/shipper-encrypt",
  "crates/shipper-types",
  "crates/shipper-config",
  "crates/shipper-registry",
  "crates/shipper-sparse-index",
  "crates/shipper-cargo-failure",
  "crates/shipper-webhook",
  "crates/shipper-output-sanitizer",
  "xtask",
]
default-members = ["crates/shipper", "crates/shipper-cli"]
exclude = ["fuzz"]
resolver = "3"

[workspace.package]
version = "0.3.0-rc.2"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.95"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
# Intra-workspace crates (path + version for publish-readiness).
shipper = { path = "crates/shipper", version = "0.3.0-rc.2" }
shipper-core = { path = "crates/shipper-core", version = "0.3.0-rc.2" }
shipper-cli = { path = "crates/shipper-cli", version = "0.3.0-rc.2" }
shipper-config = { path = "crates/shipper-config", version = "0.3.0-rc.2" }
shipper-types = { path = "crates/shipper-types", version = "0.3.0-rc.2" }
shipper-duration = { path = "crates/shipper-duration", version = "0.3.0-rc.2" }
shipper-retry = { path = "crates/shipper-retry", version = "0.3.0-rc.2" }
shipper-encrypt = { path = "crates/shipper-encrypt", version = "0.3.0-rc.2" }
shipper-webhook = { path = "crates/shipper-webhook", version = "0.3.0-rc.2" }
shipper-registry = { path = "crates/shipper-registry", version = "0.3.0-rc.2" }
shipper-sparse-index = { path = "crates/shipper-sparse-index", version = "0.3.0-rc.2" }
shipper-cargo-failure = { path = "crates/shipper-cargo-failure", version = "0.3.0-rc.2" }
shipper-output-sanitizer = { path = "crates/shipper-output-sanitizer", version = "0.3.0-rc.2" }

# External crates.
serde = { version = "1.0.228", features = ["derive"] }
proptest = "1.11.0"
insta = { version = "1.47.2", features = ["yaml"] }

[profile.release]
strip = true
lto = true
