[package]
name = "shipper-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
shipper = { path = "../crates/shipper" }
# Engine internals (auth, encryption, runtime) aren't re-exported from
# the `shipper` façade after #95 PR 3. Fuzz targets that exercise them
# depend on `shipper-core` directly.
shipper-core = { path = "../crates/shipper-core" }
shipper-duration = { path = "../crates/shipper-duration" }
shipper-config = { path = "../crates/shipper-config" }
shipper-output-sanitizer = { path = "../crates/shipper-output-sanitizer" }
shipper-cargo-failure = { path = "../crates/shipper-cargo-failure" }
shipper-retry = { path = "../crates/shipper-retry" }
shipper-sparse-index = { path = "../crates/shipper-sparse-index" }
shipper-webhook = { path = "../crates/shipper-webhook" }
chrono = "0.4.44"
hmac = "0.12"
sha2 = "0.10"
url = "2"
shipper-types = { path = "../crates/shipper-types" }
tempfile = "3"
temp-env = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"
humantime = "2"

[[bin]]
name = "load_state"
path = "fuzz_targets/load_state.rs"
test = false
doc = false
bench = false

[[bin]]
name = "resolve_token"
path = "fuzz_targets/resolve_token.rs"
test = false
doc = false
bench = false

[[bin]]
name = "duration_codec"
path = "fuzz_targets/duration_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "schema_version"
path = "fuzz_targets/schema_version.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cargo_failure_classifier"
path = "fuzz_targets/cargo_failure_classifier.rs"
test = false
doc = false
bench = false
[[bin]]
name = "engine_parallel_chunks"
path = "fuzz_targets/engine_parallel_chunks.rs"
test = false
doc = false
bench = false

[[bin]]
name = "execution_core"
path = "fuzz_targets/execution_core.rs"
test = false
doc = false
bench = false

[[bin]]
name = "release_levels"
path = "fuzz_targets/release_levels.rs"
test = false
doc = false
bench = false
[[bin]]
name = "redact_output"
path = "fuzz_targets/redact_output.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sparse_index"
path = "fuzz_targets/sparse_index.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_runtime_adapter"
path = "fuzz_targets/config_runtime_adapter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "plan_builder"
path = "fuzz_targets/plan_builder.rs"
test = false
doc = false
bench = false

[[bin]]
name = "git_context"
path = "fuzz_targets/git_context.rs"
test = false
doc = false
bench = false

[[bin]]
name = "webhook_payload"
path = "fuzz_targets/webhook_payload.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_parse"
path = "fuzz_targets/config_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "state_load"
path = "fuzz_targets/state_load.rs"
test = false
doc = false
bench = false

[[bin]]
name = "receipt_load"
path = "fuzz_targets/receipt_load.rs"
test = false
doc = false
bench = false

[[bin]]
name = "receipt_deserialize"
path = "fuzz_targets/receipt_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "execution_state_deserialize"
path = "fuzz_targets/execution_state_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "plan_levels"
path = "fuzz_targets/plan_levels.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_deserialize"
path = "fuzz_targets/config_deserialize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "webhook_payload_construct"
path = "fuzz_targets/webhook_payload_construct.rs"
test = false
doc = false
bench = false

[[bin]]
name = "auth_token_resolve"
path = "fuzz_targets/auth_token_resolve.rs"
test = false
doc = false
bench = false

[[bin]]
name = "output_sanitizer"
path = "fuzz_targets/output_sanitizer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "duration_parse"
path = "fuzz_targets/duration_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config_parser"
path = "fuzz_targets/config_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "encrypt_decrypt"
path = "fuzz_targets/encrypt_decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "retry_strategy"
path = "fuzz_targets/retry_strategy.rs"
test = false
doc = false
bench = false

[[bin]]
name = "types_serialization"
path = "fuzz_targets/types_serialization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "plan_ordering"
path = "fuzz_targets/plan_ordering.rs"
test = false
doc = false
bench = false

[[bin]]
name = "event_log_roundtrip"
path = "fuzz_targets/event_log_roundtrip.rs"
test = false
doc = false
bench = false
