[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

description = "Internal tooling for the shipper workspace (policy reports, inventory, checks). Not published."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true }
serde_json = "1.0"
toml = "0.8"
globset = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"

[lints]
workspace = true
