[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

description = "Internal tooling for the shipper workspace (policy reports, inventory, checks). Not published."

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true }
serde_json = "1.0"
toml = "1.1"
globset = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1"
# AST-based panic-family detector (no-panic baseline, #187). `span-locations`
# on proc-macro2 enables `.start().line`/`.column` from non-proc-macro
# contexts, which is required for snippet extraction.
syn = { version = "3", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[lints]
workspace = true
