[package]
name = "shipper-cargo-failure"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Cargo publish failure classification for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-cargo-failure"
keywords = ["cargo", "publish", "retry", "errors"]
categories = ["development-tools"]

[dev-dependencies]
proptest.workspace = true
insta = { workspace = true }

[lints]
workspace = true
