[package]
name = "shipper-duration"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Duration parsing and serde codecs for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-duration"
keywords = ["duration", "serde", "parsing"]
categories = ["development-tools"]

[dependencies]
serde.workspace = true
humantime = "2.3.0"

[dev-dependencies]
insta = { workspace = true }
proptest.workspace = true
serde_json = "1.0"
toml = "1.0.3"

[lints]
workspace = true
