[package]
name = "shipper-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Registry API client for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-registry"
keywords = ["registry", "crates-io", "publish"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
serde.workspace = true
serde_json = "1.0"
reqwest = { version = "0.13", features = ["blocking", "json", "rustls"] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.10", features = ["std"] }
shipper-sparse-index.workspace = true
shipper-types.workspace = true

[dev-dependencies]
insta = { workspace = true }
proptest.workspace = true
tempfile = "3"
tiny_http = "0.12"

[lints]
workspace = true
