[package]
name = "shipper-webhook"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Webhook notifications for shipper"
repository = "https://github.com/EffortlessMetrics/shipper"
documentation = "https://docs.rs/shipper-webhook"
keywords = ["webhook", "notification", "publish"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0"
hmac = "0.12"
serde.workspace = true
serde_json = "1.0"
reqwest = { version = "0.13", features = ["blocking", "json", "rustls"] }
sha2 = "0.10"

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
tempfile = "3"
tiny_http = "0.12"
tokio = { version = "1.52", features = ["rt", "macros"] }

[lints]
workspace = true
